# Process this file with autoconf to produce a configure script.

AC_INIT(servlet, 2.3)
AC_CONFIG_SRCDIR(source/javax/servlet/Servlet.java)
AM_INIT_AUTOMAKE

PACKAGE="servlet"
VERSION="2.3"
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AC_PROG_JAVAC
#AC_PROG_JAVADOC
AC_PROG_JAR
AC_CHECK_CLASSPATH

AC_CONFIG_FILES(Makefile)

AC_OUTPUT
